[gd_scene load_steps=27 format=2]

[ext_resource path="res://Intro.gd" type="Script" id=1]
[ext_resource path="res://Image.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/intro/img1.jpg" type="Texture" id=3]
[ext_resource path="res://assets/intro/img_2.jpeg" type="Texture" id=4]
[ext_resource path="res://assets/intro/img_3.jpeg" type="Texture" id=5]
[ext_resource path="res://assets/intro/img_4.jpeg" type="Texture" id=6]
[ext_resource path="res://assets/intro/img_5.jpeg" type="Texture" id=7]
[ext_resource path="res://assets/intro/img_7.jpeg" type="Texture" id=8]
[ext_resource path="res://assets/intro/img_8.jpeg" type="Texture" id=9]
[ext_resource path="res://assets/intro/img_9.jpeg" type="Texture" id=10]
[ext_resource path="res://Image.gd" type="Script" id=11]
[ext_resource path="res://popup_theme.tres" type="Theme" id=12]
[ext_resource path="res://assets/fonts/PermanentMarker-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://assets/audio/intro.ogg" type="AudioStream" id=14]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.733333, 0.101961, 0.14902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.823529, 0.254902, 0.298039, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.733333, 0.101961, 0.14902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.533333, 0.0745098, 0.109804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=21]
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 16 )
Button/styles/hover = SubResource( 17 )
Button/styles/normal = SubResource( 18 )
Button/styles/pressed = SubResource( 19 )

[sub_resource type="DynamicFont" id=15]
size = 25
font_data = ExtResource( 13 )

[sub_resource type="Theme" id=20]
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 16 )
Button/styles/hover = SubResource( 17 )
Button/styles/normal = SubResource( 18 )
Button/styles/pressed = SubResource( 19 )

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 0.267943 ),
"update": 0,
"values": [ -80.0, -6.0 ]
}

[sub_resource type="Animation" id=7]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 1, 0.267943 ),
"update": 0,
"values": [ -80.0, -6.0 ]
}

[node name="Intro" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -2930.0
margin_top = -1580.0
margin_right = 3051.0
margin_bottom = 1780.0
color = Color( 0, 0, 0, 1 )

[node name="Image1" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 540 )
texture = ExtResource( 3 )
is_visible = true

[node name="Image2" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="Image3" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 540 )
texture = ExtResource( 5 )

[node name="Image4" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 540 )
texture = ExtResource( 6 )

[node name="Image5" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 540 )
texture = ExtResource( 7 )

[node name="Image6" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 540 )
texture = ExtResource( 8 )

[node name="Image7" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 540 )
texture = ExtResource( 9 )

[node name="Image8" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 10 )
script = ExtResource( 11 )

[node name="Anim" type="AnimationPlayer" parent="Image8"]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Popup" type="Popup" parent="Camera2D"]
visible = true
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 960, 550 )
popup_exclusive = true

[node name="Panel" type="Panel" parent="Camera2D/Popup"]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
theme = ExtResource( 12 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/Popup/Panel"]
margin_left = -100.0
margin_top = -76.0
margin_right = 100.0
margin_bottom = 100.0
color = Color( 0, 0, 0, 0.713726 )

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/Popup/Panel"]
margin_left = -87.0
margin_top = -76.0
margin_right = 86.0
margin_bottom = 76.0
theme = ExtResource( 12 )
alignment = 1

[node name="Label" type="Label" parent="Camera2D/Popup/Panel/VBoxContainer"]
margin_right = 173.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 10 )
text = "SKIP ?"
align = 1

[node name="Yes" type="Button" parent="Camera2D/Popup/Panel/VBoxContainer"]
margin_top = 76.0
margin_right = 173.0
margin_bottom = 112.0
focus_mode = 0
theme = SubResource( 21 )
custom_fonts/font = SubResource( 15 )
enabled_focus_mode = 0
text = "YES"

[node name="No" type="Button" parent="Camera2D/Popup/Panel/VBoxContainer"]
margin_top = 116.0
margin_right = 173.0
margin_bottom = 152.0
focus_mode = 0
theme = SubResource( 20 )
custom_fonts/font = SubResource( 15 )
enabled_focus_mode = 0
text = "No"

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -80.0
autoplay = true

[node name="Anim" type="AnimationPlayer" parent="Audio"]
anims/fade_in = SubResource( 6 )
anims/fade_out = SubResource( 7 )
[connection signal="animation_finished" from="Image8/Anim" to="Image8" method="anim_finished"]
[connection signal="pressed" from="Camera2D/Popup/Panel/VBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Camera2D/Popup/Panel/VBoxContainer/No" to="." method="_on_No_pressed"]
